[gd_scene load_steps=14 format=2]

[ext_resource path="res://assets/art/particles/glowing_circle.png" type="Texture" id=1]
[ext_resource path="res://source/VFX/LaserBeam2D.gd" type="Script" id=2]
[ext_resource path="res://assets/art/actors/back16.png" type="Texture" id=3]

[sub_resource type="Gradient" id=1]
offsets = PoolRealArray( 0.616188, 0.997389 )
colors = PoolColorArray( 1, 1, 1, 1, 1, 1, 1, 0 )

[sub_resource type="GradientTexture" id=2]
gradient = SubResource( 1 )

[sub_resource type="Curve" id=3]
_data = [ Vector2( 0.515625, 1 ), 0.0, -3.04695, 0, 0, Vector2( 1, 0 ), 0.0, 0.0, 0, 0 ]

[sub_resource type="CurveTexture" id=4]
curve = SubResource( 3 )

[sub_resource type="ParticlesMaterial" id=5]
flag_disable_z = true
gravity = Vector3( 0, 0, 0 )
initial_velocity = 100.0
orbit_velocity = 0.0
orbit_velocity_random = 0.0
scale = 0.5
scale_curve = SubResource( 4 )
color_ramp = SubResource( 2 )

[sub_resource type="Curve" id=6]
_data = [ Vector2( 0.015625, 0 ), 0.0, 0.0, 0, 0, Vector2( 0.503606, 1 ), 0.0, 0.0, 0, 0, Vector2( 1, 0 ), 0.0, 0.0, 0, 0 ]

[sub_resource type="CurveTexture" id=7]
curve = SubResource( 6 )

[sub_resource type="ParticlesMaterial" id=8]
emission_shape = 2
emission_box_extents = Vector3( 60, 20, 1 )
flag_disable_z = true
gravity = Vector3( 0, 0, 0 )
initial_velocity = -100.0
orbit_velocity = 0.0
orbit_velocity_random = 0.0
tangential_accel = 100.0
tangential_accel_random = 1.0
scale = 0.3
scale_curve = SubResource( 7 )

[sub_resource type="ParticlesMaterial" id=9]
flag_disable_z = true
gravity = Vector3( 0, 0, 0 )
initial_velocity = 100.0
orbit_velocity = 0.0
orbit_velocity_random = 0.0
scale = 0.5
scale_curve = SubResource( 4 )
color_ramp = SubResource( 2 )

[sub_resource type="Environment" id=10]
background_mode = 4
glow_enabled = true
glow_bicubic_upscale = true

[node name="LaserBeam2D" type="RayCast2D"]
collision_mask = 2
collide_with_areas = true
script = ExtResource( 2 )

[node name="FillLine2D" type="Line2D" parent="."]
points = PoolVector2Array( 0, 0, 100, 0 )
width = 4.0
default_color = Color( 0.533333, 0.972549, 1, 1 )
joint_mode = 2
begin_cap_mode = 2
end_cap_mode = 2

[node name="CastingParticles2D" type="Particles2D" parent="."]
modulate = Color( 1.5, 1.5, 1.5, 1 )
emitting = false
process_material = SubResource( 5 )
texture = ExtResource( 1 )

[node name="BeamParticles2D" type="Particles2D" parent="."]
visible = false
modulate = Color( 1.5, 1.5, 1.5, 1 )
emitting = false
amount = 50
randomness = 1.0
visibility_rect = Rect2( -2500, -2500, 5000, 5000 )
local_coords = false
draw_order = 1
process_material = SubResource( 8 )
texture = ExtResource( 1 )

[node name="CollisionParticles2D" type="Particles2D" parent="."]
modulate = Color( 1.5, 1.5, 1.5, 1 )
emitting = false
amount = 16
lifetime = 0.3
local_coords = false
process_material = SubResource( 9 )
texture = ExtResource( 1 )

[node name="Tween" type="Tween" parent="."]

[node name="WorldEnvironment" type="WorldEnvironment" parent="."]
environment = SubResource( 10 )

[node name="Turret" type="Sprite" parent="."]
scale = Vector2( -0.253493, -0.253493 )
texture = ExtResource( 3 )
